# link-ear

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: build.yml
desktop/src/: main.jsx  styles.css
docs/: manual-smoke-test.md  test-report-audit.md
src/: backend.rs  bilibili.rs  buffer_state.rs  connection_state.rs  core.rs  lib.rs  main.rs  media_cache.rs  music_state.rs  playback_health.rs  player.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
