[package]
name = "link-ear-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
libp2p = { version = "0.56.0", default-features = false }
link-ear = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.3", features = ["rt", "sync"] }
